<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/orderCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/restaurantLogo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/restaurant_logo" />

                    <TextView
                        android:id="@+id/restaurantId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/restaurantLogo"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#9FA8DA"
                        app:layout_constraintStart_toStartOf="@id/restaurantId"
                        app:layout_constraintTop_toBottomOf="@id/restaurantId" />

                    <ImageView
                        android:id="@+id/arrowIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_launcher_background"
                        android:contentDescription="@string/arrow_for_more_details"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/dividerFirstCardSection1"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_green_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/restaurantLogo" />

                    <ImageView
                        android:id="@+id/driverLogo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/driver_logo"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dividerFirstCardSection1" />

                    <TextView
                        android:id="@+id/driverName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/driverLogo"
                        app:layout_constraintTop_toTopOf="@id/driverLogo"
                        app:layout_constraintBottom_toBottomOf="@id/driverLogo"/>

                    <View
                        android:id="@+id/dividerFirstCardSection2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_green_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/driverName" />

                    <Button
                        android:id="@+id/reorderButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="10dp"
                        android:text="@string/reorder"
                        android:textColor="@android:color/white"
                        android:backgroundTint ="@android:color/holo_green_dark"
                        app:layout_constraintTop_toBottomOf="@id/dividerFirstCardSection2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <Button
                        android:id="@+id/trackOrderButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="10dp"
                        android:text="@string/track_your_order"
                        android:textColor="@android:color/white"
                        android:backgroundTint ="@android:color/holo_green_dark"
                        app:layout_constraintTop_toBottomOf="@id/dividerFirstCardSection2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:visibility="invisible"/>

                    <View
                        android:id="@+id/dividerFirstCardSection3"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_green_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/reorderButton" />

                    <TextView
                        android:id="@+id/orderRatingText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/order_rating"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dividerFirstCardSection3" />

                    <ImageView
                        android:id="@+id/orderRatingStars"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/order_stars_rating"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/orderRatingText"
                        app:layout_constraintBottom_toBottomOf="@id/orderRatingText"/>

                    <View
                        android:id="@+id/dividerFirstCardSection4"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_green_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/orderRatingText" />

                    <TextView
                        android:id="@+id/driverRatingText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="Driver Rating"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dividerFirstCardSection4" />

                    <ImageView
                        android:id="@+id/driverRatingLogo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/driver_rating"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/driverRatingText"
                        app:layout_constraintBottom_toBottomOf="@id/driverRatingText"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/orderDetailCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/orderDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_order"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/orderDetailRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/orderDetail" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/receiptCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/subTotalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/subtotal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/subTotalText"/>

                    <TextView
                        android:id="@+id/deliveryChargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/delivery_charge"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="@id/subTotalText"
                        app:layout_constraintTop_toBottomOf="@id/subTotalText" />

                    <TextView
                        android:id="@+id/deliveryCharge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/deliveryChargeText"/>

                    <View
                        android:id="@+id/dividerThirdCardSection1"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_green_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/deliveryChargeText" />

                    <TextView
                        android:id="@+id/totalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/total"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/dividerThirdCardSection1" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/totalText"/>

                    <View
                        android:id="@+id/dividerThirdCardSection2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_green_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/totalText" />

                    <TextView
                        android:id="@+id/paidWithText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/paid_with"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/dividerThirdCardSection2" />

                    <ImageView
                        android:id="@+id/paymentMethod"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/payment_method"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/paidWithText"
                        app:layout_constraintBottom_toBottomOf="@id/paidWithText"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
