<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.order.cards.OrderDetailOrderCardAssigningFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/restaurantLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/restaurant_logo" />

        <TextView
            android:id="@+id/restaurantId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/restaurantLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#9FA8DA"
            app:layout_constraintStart_toStartOf="@id/restaurantId"
            app:layout_constraintTop_toBottomOf="@id/restaurantId" />

        <ImageView
            android:id="@+id/arrowIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/arrow_for_more_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dividerFirstCardSection1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/holo_green_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurantLogo" />

        <Button
            android:id="@+id/trackOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:text="@string/track_your_order"
            android:textColor="@android:color/white"
            android:backgroundTint ="@android:color/holo_green_dark"
            app:layout_constraintTop_toBottomOf="@id/dividerFirstCardSection1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>