<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.order.OrderDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- First CardView -->
                <FrameLayout
                    android:id="@+id/orderCardFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!-- Second CardView: Order Details -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/orderDetailCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/orderDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_order"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/orderDetailRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/orderDetail" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- Third CardView: Receipt Info -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/receiptCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/subTotalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/subtotal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/subTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@android:color/darker_gray"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/subTotalText"/>

                        <TextView
                            android:id="@+id/deliveryChargeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/delivery_charge"
                            android:layout_marginTop="15dp"
                            app:layout_constraintStart_toStartOf="@id/subTotalText"
                            app:layout_constraintTop_toBottomOf="@id/subTotalText" />

                        <TextView
                            android:id="@+id/deliveryCharge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@android:color/darker_gray"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/deliveryChargeText"/>

                        <View
                            android:id="@+id/dividerThirdCardSection1"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/holo_green_light"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/deliveryChargeText" />

                        <TextView
                            android:id="@+id/totalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/total"
                            android:layout_marginTop="15dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/dividerThirdCardSection1" />

                        <TextView
                            android:id="@+id/total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/totalText"/>

                        <View
                            android:id="@+id/dividerThirdCardSection2"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/holo_green_light"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/totalText" />

                        <TextView
                            android:id="@+id/paidWithText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/paid_with"
                            android:layout_marginTop="15dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/dividerThirdCardSection2" />

                        <ImageView
                            android:id="@+id/paymentMethod"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/payment_method"
                            android:src="@drawable/ic_launcher_background"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/paidWithText"
                            app:layout_constraintBottom_toBottomOf="@id/paidWithText"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>